--- a/css/main.css
+++ b/css/main.css
@@ -414,23 +414,21 @@ summary {
   }
 }
 
+.header__list {
+  display: none;
+}
+
 @media (min-width: 1200px) {
   .header__list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: auto;
   }
-}
-
-.header__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-left: auto;
 }
 
 .header__link {
