--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -50,14 +50,12 @@
   }
 }
 .header__list {
+  display: none;
   @media (min-width: 1200px) {
     display: flex;
+    flex-direction: column;
+      margin-left: auto;
   }
-}
-.header__list {
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
 }
 .header__link {
   font-family: $font;
